--- a/src/common/css/border1px.less
+++ b/src/common/css/border1px.less
@@ -15,6 +15,7 @@
 
     }
   }
+
     @media (-webkit-min-device-pixel-ratio:1.5),(min-device-pixel-ratio:1.5){
       &::after{
         -webkit-transform: scaleY(0.5);
@@ -22,3 +23,8 @@
       }
     }
 }
+  .border-none(){
+    &:after{
+      display: none;
+    }
+  }
